--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 MONGODB_URI=mongodb+srv://m001-student:eklavyaraj12065@cluster0.pdumx.mongodb.net/ecommerce?retryWrites=true&w=majority
+GOOGLE_ID=366015990698-rcun1smk9tdd4bdqfkljubqjsvvas072.apps.googleusercontent.com
+GOOGLE_SECRET=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
+FACEBOOK_CLIENT_ID=1229875947490338
+FACEBOOK_CLIENT_SECRET=6896d0712a5212480b14919e0f884bbf
+MAILER_CLIENT_ID=366015990698-ur5v59gbh8rbu3jps3uipmv6tfkr3mlj.apps.googleusercontent.com
+MAILER_CLIENT_SECRET=__bqqQh9xhyLEDTLbLMV4EGP
+MAILER_REFRESH_TOKEN=1//04OGvkl_CtzQPCgYIARAAGAQSNwF-L9IrGGjy0iKNpRmib-C0LZKB7exYkmxXf8RtlP_MpsqIvU9v2x1Yzn7nR3xe2ARRqbyvZ9I
