--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.1.6",
     "nodemailer": "^6.7.2",
+    "otp-generator": "^4.0.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "uniqid": "^5.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
