--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 MONGODB_URI=mongodb+srv://m001-student:eklavyaraj12065@cluster0.pdumx.mongodb.net/ecommerce?retryWrites=true&w=majority
-GOOGLE_ID=366015990698-rcun1smk9tdd4bdqfkljubqjsvvas072.apps.googleusercontent.com
-GOOGLE_SECRET=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
+GOOGLE_ID=366015990698-5kl7kegh4drtcuimsj59jkb2h2vgobun.apps.googleusercontent.com
+GOOGLE_SECRET=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
 FACEBOOK_CLIENT_ID=1229875947490338
 FACEBOOK_CLIENT_SECRET=6896d0712a5212480b14919e0f884bbf
 MAILER_CLIENT_ID=366015990698-ur5v59gbh8rbu3jps3uipmv6tfkr3mlj.apps.googleusercontent.com
 MAILER_CLIENT_SECRET=__bqqQh9xhyLEDTLbLMV4EGP
 MAILER_REFRESH_TOKEN=1//04OGvkl_CtzQPCgYIARAAGAQSNwF-L9IrGGjy0iKNpRmib-C0LZKB7exYkmxXf8RtlP_MpsqIvU9v2x1Yzn7nR3xe2ARRqbyvZ9I
-BASE_URL=http://localhost:3000
+BASE_URL=https://api.eklavyasingh.me
 PORT=3000
 REDIRECT_URI=https://developers.google.com/oauthplayground/
