--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react-native-webview": "^11.16.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
   },
