--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ FACEBOOK_CLIENT_SECRET=6896d0712a5212480b14919e0f884bbf
 MAILER_CLIENT_ID=366015990698-ur5v59gbh8rbu3jps3uipmv6tfkr3mlj.apps.googleusercontent.com
 MAILER_CLIENT_SECRET=__bqqQh9xhyLEDTLbLMV4EGP
 MAILER_REFRESH_TOKEN=1//04OGvkl_CtzQPCgYIARAAGAQSNwF-L9IrGGjy0iKNpRmib-C0LZKB7exYkmxXf8RtlP_MpsqIvU9v2x1Yzn7nR3xe2ARRqbyvZ9I
-BASE_URL=http://localhost:3000
-PORT=3000
+BASE_URL=https://api.eklavyasingh.me
+PORT=5000
 REDIRECT_URI=https://developers.google.com/oauthplayground/
