--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^92.0.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "otp-generator": "^4.0.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "react-native-webview": "^11.16.0",
+    "sharp": "^0.29.3",
+    "socket.io": "^4.4.1",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
   },
